# snake-ai

./: .gitignore  Apple.cpp  Apple.h  CMakeLists.txt  DrawManager.cpp  DrawManager.h  Env.h  PathFinder.cpp  PathFinder.h  README.md  Snake.cpp  Snake.h  main.cpp
